--- a/index.html
+++ b/index.html
@@ -510,9 +510,7 @@
                 <div class="row">
                     <div class="col-md-6 p-40 footer-left">
                         <a href="index.html"><img src="img/logo.png"  width="94px" alt="FundRack" class="img-fluid" data-rjs="3"></a>
-                        <p class="color-white">We prevents and alleviates human suffering in the face of encies by
-                            mobilizing the power of volunteers and donors. We are is hting every minute of every day to
-                            finish what we started and achieve our vision to advance world unders.</p>
+                        <p class="color-white">Charity DApp is the creation of Team Era Swap – Era Swap is the token that power multiple Decentralized P2P Platforms. Charity DApp is a digital platform built with the objective of re-imagining a nonprofit organization by merging Smart Contracts, and distributed ledger technology like Blockchain.</p>
                         
                     </div>
                     <div class="col-md-6 p-40 footer-right align-self-center">
