making about us content change

--- a/index.html
+++ b/index.html
@@ -179,14 +179,16 @@
                     <div class="about-left">
                         <h4 class="color-base text-upper">About Us</h4>
                         <h2 class="color-secondary">Initiating the transparent P2P ecosystem for charitable causes.</h2>
-                        <p>Charity DApp is the creation of Team Era Swap – Era Swap is the token that power multiple Decentralized P2P Platforms. Charity DApp is a digital platform built with the objective of re-imagining a non-profitorganization by merging Smart Contracts, and distributed ledger technology like Blockchain</p>
+                        <p>Charity DApp is the creation of Team Era Swap – Era Swap is the token that power multiple Decentralized 
+						P2P Platforms. Charity DApp is a digital platform built with the objective of re-imagining 
+						a non-profitorganization by merging Smart Contracts, and distributed ledger technology like Blockchain</p>
                         <div class="row">
                             <div class="col-md-6 about-innar">
                                 <h4 class="color-secondary">Our Strategic</h4>
                                 <ul class="about-list">
                                     <li> Increase Accountability & Transparency </li>
                                     <li> P2P Transfers i.e. No middlemen </li>
-                                    <li> Aadhaar Verification of Receiver </li>
+                                    <li> Blockchain KYC authentication of charity receiver</li>
                                 </ul>
                             </div>
                             <div class="col-md-6 about-innar">
@@ -510,7 +512,7 @@
                         <a href="index.html"><img src="img/logo.png"  width="94px" alt="" class="img-fluid" data-rjs="3"></a>
                         <p class="color-white">Charity DApp is the creation of Team Era Swap – Era Swap is the token that power
 						multiple Decentralized P2P Platforms. Charity DApp is a digital platform built with the objective 
-						of re-imagining a non-profitorganization by merging Smart Contracts, and distributed ledger technology
+						of re-imagining a non-profit organization by merging Smart Contracts, and distributed ledger technology
 						like Blockchain</p>
                         
                     </div>
