--- a/index.html
+++ b/index.html
@@ -523,7 +523,8 @@
 
 								
 								<li><a href="https://www.facebook.com/eraswap"><i class="fab fa-facebook-square"></i></a></li>
-								<li><a href="https://www.linkedin.com/company/eraswap/"><i class="fab fa-linkedin"></i></a></li>
+								<li><a href="https://mobile.twitter.com/EraSwapTech"><i class="fab fa-twitter"></i></a></li>
+								 <li><a href="https://www.linkedin.com/company/eraswap/"><i class="fab fa-linkedin"></i></a></li>
 								<li><a href="https://www.instagram.com/eraswap/?hl=en"><i class="fab fa-instagram"></i></a></li>
 								<li><a href="https://www.youtube.com/channel/UCGCP4f5DF1W6sbCjS6y3T1g?view_as=subscriber"><i class="fab fa-youtube"></i></a></li>
                              </ul>
