--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Transparent P2P Ecosystem for Charitable Causes – Charity Dapp</title>
     <meta name="description" content="Charity DApp is a digital platform built with the objective of re-imagining a non-profitorganization by merging Smart Contracts, and distributed ledger technology like Blockchain." />
-    <meta name="keywords" content="1) Charity, Global Charity world, Charitable, Charity sector, Charity practice, Decentralized Charity, Charity Dapp, Decentralized Charity Company
+    <meta name="keywords" content="Charity, Global Charity world, Charitable, Charity sector, Charity practice, Decentralized Charity, Charity Dapp, Decentralized Charity Company
      , charitable trust, Transparent Charitable, Peer to peer charity, Decentralized Charity Platform, Digital Charity platform" />
      
   
