pdf terms and condition added 15 july

--- a/index.html
+++ b/index.html
@@ -542,7 +542,9 @@
                     </div>
                     <div class="col-md-6 text-right">
                         <ul class="footer-menu">
-                            <li><a href="Charity-dapp-terms.pdf" target="_blank" class="color-white">Terms & Conditins</a></li>
+                            <li><a href="charitydapp-terms-conditions.pdf" target="_blank" class="color-white">Terms & Conditins</a></li>
+                            <li><a href="https://eraswaptoken.io/pdf/eraswap-terms-conditions.pdf" target="_blank" class="color-white">Era Swap Terms & Conditins</a></li>
+                           
                             <li><a href="Charity-dapp-Privacy.pdf" target="_blank" class="color-white">Privacy Policy</a></li>
                         </ul>
                     </div>
