howey test and white paper pdf link added 17july

--- a/index.html
+++ b/index.html
@@ -546,6 +546,9 @@
                             <li><a href="https://eraswaptoken.io/pdf/eraswap-terms-conditions.pdf" target="_blank" class="color-white">Era Swap Terms & Conditins</a></li>
                            
                             <li><a href="Charity-dapp-Privacy.pdf" target="_blank" class="color-white">Privacy Policy</a></li>
+                           
+                              <li><a href="http://eraswaptoken.io/pdf/era-swap-howey-test-letter-august7-2018.pdf" target="_blank">Howey Test</a></li>
+                              <li><a href="http://eraswaptoken.io/pdf/eraswap_whitepaper.pdf" target="_blank">ES White Paper </a></li>
                         </ul>
                     </div>
                 </div>
